vlib/v/checker/tests/array_map_void_fn_err.vv
fn main() {
	array := [1, 2, 3, 4]
	array.map(println(it))
}
